kubernetes/k8s-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dojodocker
  namespace: dojodocker-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dojodocker
  template:
    metadata:
      labels:
        app: dojodocker
    spec:
      containers:
      - name: dojodocker
        image: dojo:1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
