kubernetes/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dojo-service
  namespace: dojodocker-namespace
spec:
  selector:
    app: dojodocker
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
